include a note to geopandas

--- a/examples/readme_examples.ipynb
+++ b/examples/readme_examples.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "Julia",
   "name": "",
-  "signature": "sha256:cebe48123e2c560ca86a063931dc4c527490b306abf0a19b91fc111c973dd0cf"
+  "signature": "sha256:e8ecaa21c97d84a1e35f6a522a20958fd5173a1033b3114a5f58dda13d3928bd"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,6 +28,13 @@
       }
      ],
      "prompt_number": 1
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The following examples are based loosely on the examples in [geopandas](https://github.com/geopandas/geopandas):"
+     ]
     },
     {
      "cell_type": "code",
